apps/speedtest-tracker/kustomization/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speedtest
  labels:
    gateway-access: private
