apps/speedtest-tracker/kustomization/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest-private
spec:
  parentRefs:
  - name: private
    namespace: traefik
    sectionName: websecure-speed
  hostnames:
  - speed.yiannis.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: authentik
    backendRefs:
    - name: speedtest-tracker
      port: 80
