apps/speedtest-tracker/kustomization/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: speedtest-tracker
  namespace: speedtest
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: speedtest-tracker
      app.kubernetes.io/name: speedtest-tracker
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
        app.kubernetes.io/name: traefik
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: homepage
        app.kubernetes.io/name: homepage
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/instance: kube-prometheus-stack-prometheus
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  # External IP check used by the application before running tests.
  - toFQDNs:
    - matchName: icanhazip.com
  # Pinned Swiss Ookla servers from SPEEDTEST_SERVERS.
  - toFQDNs:
    - matchName: speedtest-ls.wingo.ch
    - matchName: ookla-cr.salt.ch
    - matchName: speedtest2.infomaniak.com
    - matchName: speedtest2.vtx.ch
    - matchName: speedtest-ng.sig-telecom.net
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
